--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -21,6 +21,11 @@ article {
     grid-template-columns: 1fr 1fr;
 }
 
+.product-names {
+    font-size: 1.1rem;
+    height: 1.1rem;
+}
+
 .main-form-input-list {
     display: flex;
     flex-direction: column;
@@ -40,4 +45,42 @@ article {
 
 .inventory-data {
     
+}
+
+.log-container {
+
+}
+
+.log-table {
+    margin: 1rem;
+    font-size: 1.3rem;
+    min-width: 40rem;
+    padding: 0.8rem 0.1rem 0 0.1rem;
+    background-color: #c3c3c3;
+    border-radius: 1rem 1rem 0 0;
+}
+
+.table-header-row {
+    background-color: #c3c3c3;
+}
+
+.table-header {
+    font-weight: bold;
+    text-align: left;
+}
+
+.table-row {
+    border-bottom: 1px solid rgba(34, 34, 34, 0.826);
+}
+
+.table-data {
+    text-align: left;
+    padding: 0.1rem;
+    border: 1px solid rgb(149, 149, 149);
+}
+.buy {
+    background-color: rgb(238, 65, 65);
+}
+.sell {
+    background-color: rgb(43, 188, 43);
 }
